comentario Ariel 2 en esta rama

--- a/index.html
+++ b/index.html
@@ -54,6 +54,6 @@
 <script src="assets/js/underscore-min.js"></script>
 <script src="assets/js/juego.js"></script>
 
-<h1>nueva rama probando</h1>
+<h1>nueva rama Ariel probando</h1>
 </body>
 </html>
