--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <header class="titulo">
-        Blackjack
+        Blackjack !!
     </header>
 
         <div class="row mt-2">
@@ -54,6 +54,6 @@
 <script src="assets/js/underscore-min.js"></script>
 <script src="assets/js/juego.js"></script>
 
-<h1>nueva rama Ariel probando</h1>
+<h1></h1>
 </body>
 </html>
